[project]
name = "keycloak-basic-auth-proxy"
version = "0.1.0"
description = "Proxy server for basic authentication based on Keycloak access tokens"
readme = "README.md"
repository = "https://github.com/khj809/keycloak-basic-auth-proxy"
authors = ["Haejoon Kim <onsealeatang@gmail.com>"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.9.7",
]

[tool.ruff]
line-length = 120
indent-width = 4
lint.select = ["E", "F", "I"]
