[project]
name = "keycloak-basic-auth-proxy"
dynamic = ["version"]
description = "Proxy server for basic authentication based on Keycloak access tokens"
readme = "README.md"
authors = [
    {name = "Haejoon Kim", email = "onsealeatang@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.3",
]

[project.urls]
Repository = "https://github.com/khj809/keycloak-basic-auth-proxy"

[dependency-groups]
dev = [
    "ruff>=0.9.7",
]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools-scm

[tool.ruff]
line-length = 120
indent-width = 4
lint.select = ["E", "F", "I"]
